# MutiMediaTools

./: .gitignore  README.md
NativePlugin/Include/MediaCodec/: MediaEncodeConfig.h  NVENCCodecAPI.h  NVENCWrapper.h  OpenGLConfig.h  shader.hpp
NativePlugin/Include/MediaPlayer/: logger.h  unity_plugin_mediaplayer.h
NativePlugin/Include/MediaPlayer/mediaplayer/: adev.h  ffrender.h  keyframelist.h  mediaplayer.h  pktqueue.h  stdefine.h  vdev.h
NativePlugin/Include/Platform/: PlatformBase.h  RenderAPI.h
NativePlugin/Src/: CMakeLists.txt
NativePlugin/Src/MediaCodec/: NVENCCodecAPI.cpp  NVENCWrapper.cpp  shader.cpp
NativePlugin/Src/MediaPlayer/: logger.c  unity_adev.c  unity_plugin_mediaplayer.c  unity_vdev.c
NativePlugin/Src/MediaPlayer/mediaplayer/: ffrender.c  keyframelist.c  mediaplayer.c  pktqueue.c  vdev_common.c
NativePlugin/Src/Platform/: RenderAPI_OpenGLCoreES.cpp  RenderingPlugin.cpp
UnityPlugin/: MediaCodec.cs  MediaPlayer.cs  NvEncWrapper.cs  VideoRecordConfig.cs
UnityPlugin/Resources/Shaders/: CutVideoFrame.shader  ImageFlipY.shader  Metaworks ImageEffectShader.shader
UnityPlugin/Scripts/: MediaCodec.cs  MediaPlayer.cs  NvDecWrapper.cs  NvEncWrapper.cs  VideoRecordConfig.cs
